# ray-tracing-challenge

./: .gitignore  CMakeBackup.txt  CMakeLists - Copy.txt  CMakeLists.txt  canvas.cc  canvas.h  colors.h  commands_of_note.md  console.cc  intersection.cc  intersection.h  light.cc  light.h  main.cc  main_opengl.cc  main_test copy.cc  main_test.cc  material.h  run_app.bat  run_tests.bat  sphere.cc  sphere.h  tuple.cc  tuple.h  utils.cc  utils.h  world.cc  world.h
_old_mains/: main copy_WHOCARES.cc  main_classic_sphere.cc  main_draw_circle.cc
_old_mains/lunar_hack/: main.cc
include/: canvas.h  colors.h  console.h  intersection.h  light.h  shape.h  sphere.h  testshape.h  utils.h
old_mains/: fair_solid_circle_draw_main.cc  main_draw_arc.cc  main_drawcircle.cc
old_mains/lunar_hack/: light.cc  main.cc
src/: canvas.cc  intersection.cc  light.cc  main.cc  material.cc  shape.cc  sphere.cc  testshape.cc  tuple.cc  utils.cc  world.cc
tests/: all_tests.cc  intersection_tests.cc  lighting_tests.cc  matrix_tests.cc  misc_tests.cc  shape_tests.cc  test_utils.cc  test_utils.h  tuple_tests.cc  world_tests.cc
